tests/idris2/reflection005/expected
1/1: Building refdecl (refdecl.idr)
Error: While processing right hand side of bad. When unifying Elab () and Elab a.
Mismatch between: () and a.

refdecl.idr:13:16--13:29
    |
 13 | bad = %runElab mkDecls `(94)
    |                ^^^^^^^^^^^^^

Main> 9400
Main> Bye for now!
